--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
